syntax = "proto2";

option java_package="com.netty.common.protobuf";
option java_outer_classname = "Message";
import "Command.proto";

message MessageBase {
	required string clientId = 1;
  	required CommandType cmd = 2;
  	optional string data = 3;
}